--- a/apps/my-app/nginx.yaml
+++ b/apps/my-app/nginx.yaml
@@ -17,3 +17,14 @@ spec:
       containers:
       - image: nginx
         name: nginx
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp
+spec:
+  selector:
+    app: myapp
+  ports:
+  - port: 80
+    targetPort: 80
