--- a/argocd/root/apps-appset.yaml
+++ b/argocd/root/apps-appset.yaml
@@ -25,6 +25,8 @@ spec:
         server: https://kubernetes.default.svc
         namespace: '{{.path.basename}}'
       syncPolicy:
-        automated: {}
+        automated:
+          prune: true
+          allowEmpty: true
         syncOptions:
         - CreateNamespace=true
