--- a/argocd/root/apps-appset.yaml
+++ b/argocd/root/apps-appset.yaml
@@ -28,5 +28,6 @@ spec:
         automated:
           prune: true
           allowEmpty: true
+          selfHeal: true
         syncOptions:
         - CreateNamespace=true
